// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkBox /> by default matches with snapshot 1`] = `
<a
  className="sc-bwzfXH cMkqNi"
  href="#"
>
  <div
    className="sc-gzVnrw cDvgFr"
  >
    <div
      className="sc-bZQynM YZCWC"
    >
      <svg
        className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
        height="5.64"
        viewBox="0 0 6 6"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Arrow
        </title>
        <path
          d="M6 0H0v6h2V2h4z"
        />
      </svg>
    </div>
  </div>
</a>
`;

exports[`<LinkBox /> with some props matches with snapshot 1`] = `
<a
  className="sc-bwzfXH cMkqNi"
  href="#foobar"
  rel="noopener"
  target="_blank"
>
  <div
    className="sc-gzVnrw cDvgFr"
  >
    <div
      className="sc-ifAKCX blkdDz"
    >
      <svg
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="10"
          cy="10"
          fill="#fff"
          r="10"
        />
        <path
          d="m6 10 6-6-1.25 6h3.25l-6 6 1.25-6z"
          fill="#222"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      className="sc-htpNat jpuILz k-u-margin-top-double k-u-margin-bottom-double"
    >
      foobar
    </div>
    <div
      className="sc-bZQynM YZCWC"
    >
      <svg
        className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
        height="5.64"
        viewBox="0 0 6 6"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Arrow
        </title>
        <path
          d="M6 0H0v6h2V2h4z"
        />
      </svg>
    </div>
  </div>
</a>
`;

exports[`Deprecated <LinkBox /> by default matches with snapshot 1`] = `
<a
  className="sc-bwzfXH cMkqNi"
  href="#"
>
  <div
    className="sc-gzVnrw cDvgFr"
  >
    <div
      className="sc-bZQynM YZCWC"
    >
      <svg
        className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
        height="5.64"
        viewBox="0 0 6 6"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Arrow
        </title>
        <path
          d="M6 0H0v6h2V2h4z"
        />
      </svg>
    </div>
  </div>
</a>
`;

exports[`Deprecated <LinkBox /> with some props matches with snapshot 1`] = `
<a
  className="sc-bwzfXH cMkqNi"
  href="#foobar"
  rel="noopener"
  target="_blank"
>
  <div
    className="sc-gzVnrw sc-htoDjs cZBpJh"
  >
    <div
      className="sc-ifAKCX sc-EHOje jTKTIX k-u-hidden@xs-down--important"
    />
    <div
      className="sc-htpNat sc-bxivhb eaSHrM k-u-margin-top-double k-u-margin-bottom-double"
    >
      <div
        className="sc-dnqmqq hVuwSf"
      >
        <span
          className="k-u-color-font1 k-u-size-default k-u-weight-regular"
          style={
            Object {
              "lineHeight": 1,
            }
          }
        >
          Lorem ipsum
        </span>
      </div>
      <span
        className="k-u-color-font1 k-u-size-tiny k-u-weight-light"
        style={
          Object {
            "lineHeight": 1.3,
          }
        }
      >
        In enim justo, rhoncus ut,
      </span>
    </div>
    <div
      className="sc-bZQynM YZCWC"
    >
      <svg
        className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
        height="5.64"
        viewBox="0 0 6 6"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Arrow
        </title>
        <path
          d="M6 0H0v6h2V2h4z"
        />
      </svg>
    </div>
  </div>
</a>
`;
